<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Crystal Money</string>
    <string name="action_settings">Настройки</string>
    <string name="prop_title">Настройки</string>
    <string name="button_text_about">О программе</string>
    <string name="button_prop">Настройки</string>
    <string name="title_activity_account">Редактирование счёта</string>
    <string name="account_name_caption">Имя счёта</string>
    <string name="caption_amount">Сумма</string>
    <string name="account_button_save">Сохранить</string>
    <string name="title_activity_account_list">Мои счета</string>
    <string name="account_list_add_caption">Добавить счёт</string>
    <string name="activity_main_accounts_caption">Мои счета</string>
    <string name="account_is_card">Банковская карта</string>
    <string name="title_activity_income">Доходы</string>
    <string name="title_activity_outcome">Расходы</string>
    <string name="caption_comment">Комментарий</string>
    <string name="caption_save">Сохранить</string>
    <string name="title_activity_income_list">Список доходов</string>
    <string name="caption_create_new">Создать новый</string>
    <string name="title_activity_category">Категория</string>
    <string name="title_activity_category_list">Список категорий</string>
    <string name="caption_delete">Удалить</string>
    <string name="caption_constraint_exception">Ошибка при удалении: от этого элемента зависят другие записи</string>
    <string name="caption_zero_account_exception">Перед добавлением транзакций необходимо создать хотя бы один счёт</string>
    <string name="caption_zero_account_exception_in_exchange">Перед выполнением перевода средств нужно создать хотя бы два счёта</string>
    <string name="caption_no_selected_category">Вы не указали категорию</string>
    <string name="title_activity_outcome_list">Список расходов</string>
    <string name="caption_move_to_another_account">Перевод средств</string>
    <string name="title_activity_stat">Статистика</string>
    <string name="caption_outcomes_by_day">Расходы за день: </string>
    <string name="caption_outcomes_by_month">Расходы за месяц: </string>
    <string name="caption_add">Добавить</string>
    <string name="caption_next">След</string>
    <string name="caption_prev">Пред</string>
    <string name="caption_edit">Редактировать</string>
    <string name="caption_rename">Переименовать</string>
    <string name="caption_cancel">Отмена</string>
    <string name="caption_category_name">Имя категории</string>
    <string name="title_activity_exchange">Перевод между счетами</string>
    <string name="title_activity_exchange_list">Переводы между счетами</string>
    <string name="message_empty_category_name">Пустое имя категории</string>
    <string name="message_category_already_exists">Категория с таким именем уже существует</string>
    <string name="caption_current_amount">Актуальный баланс</string>
    <string name="caption_empty_month_stat">Статистика за выбранный месяц отсутствует</string>
    <string name="default_category_name_for_sms">разное</string>
    <string name="caption_card_number_last_four_digits">Последние 4 цифры из 16-значного номера</string>
    <string name="caption_sms_sender">Имя отправителя sms-уведомлений</string>
    <string name="default_account_name">наличные</string>
    <string name="caption_from_account">С какого счёта</string>
    <string name="caption_to_account">На какой счёт</string>
    <string name="caption_account_icon">Картинка, связанная со счётом</string>
    <string name="caption_day">День</string>
    <string name="caption_month">Месяц</string>
    <string name="mobile_bank">мобильный банк</string>
    <string name="empty_account_list">Для начала работы создайте Ваш основной счёт.</string>
</resources>
