<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/accountScrollView"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/layoutForScroll"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/account_name_caption" />

            <EditText
                android:id="@+id/editAccountName"
                android:layout_width="wrap_content"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:ems="10">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caption_current_amount" />

            <EditText
                android:id="@+id/editAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/commentLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caption_comment" />

            <EditText
                android:id="@+id/accountCommentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <Spinner
                android:id="@+id/accountSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp" />

            <CheckBox
                android:id="@+id/isCardCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/account_is_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/caption_card_number_last_four_digits"
                android:id="@+id/cardNumberTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:visibility="gone"
                android:inputType="number"
                android:id="@+id/cardNumberEditText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/caption_sms_sender"
                android:id="@+id/smsSenderTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:inputType="text"
                android:id="@+id/smsSenderEditText" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
